# WebRTCnative

./: .gitignore  LICENSE  Links.md  README.md
.github/workflows/: WebRtcNativeAndroidLib.yml  WebRtcNativeAndroidLibs.yml  WebRtcNativeIosBindings.yml  WebRtcNativeIosLib.yml  WebRtcNativeLinuxSharedLib.yml  WebRtcNativeLinuxStaticLib.yml  WebRtcNativeMacOs.yml  WebRtcNativeMacOsSharedLib.yml  WebRtcNativeMacOsStaticLib.yml  WebRtcNativeWindowsDynamicLib.yml  WebRtcNativeWindowsStaticLib.yml
WebRtcInterop/: BUILD.gn  NOTICE
WebRtcNativeObjectsWrapper/: CMakeLists.txt  WebRtcNativeObjectsWrapper.cpp  WebRtcNativeObjectsWrapper.h
